fix makefile indent

--- a/10085/Makefile
+++ b/10085/Makefile
@@ -1,10 +1,10 @@
 CFLAG=-std=c99 -pthread
  
 all: main.c sum.c job.c
-    gcc $(CFLAG) main.c -c
-    gcc $(CFLAG) sum.c -c
-    gcc $(CFLAG) main.o sum.o job.c -o job
+	gcc $(CFLAG) main.c -c
+	gcc $(CFLAG) sum.c -c
+	gcc $(CFLAG) main.o sum.o job.c -o job
 
-.PHONY clean
+.PHONY: clean
 clean:
-    rm -rf sum.o main.o
+	rm -rf sum.o main.o
