--- a/10084/Makefile
+++ b/10084/Makefile
@@ -3,3 +3,7 @@ FLAG := -std=c99 -O2 -pthread
 
 all: prefixsum-seq.c secret.c
 	$(CC) $(FLAG) prefixsum-seq.c secret.c -o prefixsum-seq
+
+.PHONY: clean
+clean:
+	rm -rf *.o
